[gd_scene load_steps=3 format=3 uid="uid://ddjfl5p3urv50"]

[ext_resource type="Script" path="res://novel_scene.gd" id="1_1pm7w"]
[ext_resource type="Texture2D" uid="uid://ctucab3c3tous" path="res://backs/room_bg.png" id="2_w0wdv"]

[node name="Novel" type="Node2D"]
script = ExtResource("1_1pm7w")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(509.625, 513.618)
scale = Vector2(1.00269, 1.00072)
texture = ExtResource("2_w0wdv")

[node name="DateLabel" type="Label" parent="."]
offset_left = 245.0
offset_top = 49.0
offset_right = 786.0
offset_bottom = 153.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = -1.0
offset_top = 818.0
offset_right = 1022.0
offset_bottom = 1025.0

[node name="DialogAvatar" type="Sprite2D" parent="."]
position = Vector2(101, 918)
scale = Vector2(0.2, 0.2)

[node name="DialogLabel" type="Label" parent="."]
offset_left = 181.0
offset_top = 894.0
offset_right = 1014.0
offset_bottom = 1025.0
theme_override_font_sizes/font_size = 25
autowrap_mode = 3

[node name="Blackout" type="ColorRect" parent="."]
offset_right = 1025.0
offset_bottom = 1025.0
color = Color(0, 0, 0, 0)

[node name="SkipStoryButton" type="Button" parent="."]
offset_left = 389.0
offset_top = 186.0
offset_right = 655.0
offset_bottom = 262.0
text = "ПРОПУСТИТЬ ИСТОРИЮ"
